Small spacing fix

--- a/styles.css
+++ b/styles.css
@@ -238,7 +238,7 @@ p {
 
 @media screen and (min-width: 48em) {
   .hero {
-    margin-bottom: 6.5rem;
+    margin-bottom: 5.2rem;
   }
 
   .hero__button-container {
